trying to fix side scroll on iphone take 2

--- a/style.css
+++ b/style.css
@@ -420,4 +420,8 @@ a:hover {
         align-items: center;
         margin-top: 10px;
     }
+    .game-prefiew-image div div img {
+        padding: 0px;
+        width: 100%;
+    }
 }
